[gd_scene load_steps=13 format=4 uid="uid://dnd1fh3npsxg3"]

[ext_resource type="Script" uid="uid://b5obmj5oe5y64" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="Texture2D" uid="uid://bj0fn7ybmox4j" path="res://assets/tiles/Terrain (16x16).png" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://bb01obgrqqigx" path="res://scenes/melon.tscn" id="2_iywne"]
[ext_resource type="Texture2D" uid="uid://ompem827pjoq" path="res://assets/backgrounds/Yellow.png" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://c5llwofr8lxss" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://rhs1g7m47gt1" path="res://scenes/wall.tscn" id="5_u5sy4"]
[ext_resource type="PackedScene" uid="uid://dtpvdfygtgegh" path="res://scenes/hud.tscn" id="6_p57ef"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iywne"]
texture = ExtResource("2_lbhrr")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_p57ef"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_iywne")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yqjtg"]
texture = ExtResource("1_uwrxv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0/terrains_peering_bit/right_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0/terrains_peering_bit/right_side = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0/terrains_peering_bit/left_side = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0/terrains_peering_bit/right_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_side = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_lnu2h"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_yqjtg")

[sub_resource type="Curve2D" id="Curve2D_lbhrr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0)
}
point_count = 2

[node name="Game" type="Node2D"]
script = ExtResource("1_lnu2h")
melon_scene = ExtResource("2_iywne")

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_p57ef")

[node name="Terrain" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAnABYAAAAIAAEAAAAnABUAAAAIAAEAAAAnABQAAAAIAAEAAAAnABMAAAAIAAAAAAAmABYAAAAHAAEAAAAmABUAAAAHAAEAAAAmABQAAAAHAAEAAAAmABMAAAAHAAAAAAAlABYAAAAHAAEAAAAlABUAAAAHAAEAAAAlABQAAAAHAAEAAAAlABMAAAAHAAAAAAAkABYAAAAHAAEAAAAkABUAAAAHAAEAAAAkABQAAAAHAAEAAAAkABMAAAAHAAAAAAAjABYAAAAHAAEAAAAjABUAAAAHAAEAAAAjABQAAAAHAAEAAAAjABMAAAAHAAAAAAAiABYAAAAHAAEAAAAiABUAAAAHAAEAAAAiABQAAAAHAAEAAAAiABMAAAAHAAAAAAAhABYAAAAHAAEAAAAhABUAAAAHAAEAAAAhABQAAAAHAAEAAAAhABMAAAAHAAAAAAAgABYAAAAHAAEAAAAgABUAAAAHAAEAAAAgABQAAAAHAAEAAAAgABMAAAAHAAAAAAAfABYAAAAHAAEAAAAfABUAAAAHAAEAAAAfABQAAAAHAAEAAAAfABMAAAAHAAAAAAAeABYAAAAHAAEAAAAeABUAAAAHAAEAAAAeABQAAAAHAAEAAAAeABMAAAAHAAAAAAAdABYAAAAHAAEAAAAdABUAAAAHAAEAAAAdABQAAAAHAAEAAAAdABMAAAAHAAAAAAAcABYAAAAHAAEAAAAcABUAAAAHAAEAAAAcABQAAAAHAAEAAAAcABMAAAAHAAAAAAAbABYAAAAHAAEAAAAbABUAAAAHAAEAAAAbABQAAAAHAAEAAAAbABMAAAAHAAAAAAAaABYAAAAHAAEAAAAaABUAAAAHAAEAAAAaABQAAAAHAAEAAAAaABMAAAAHAAAAAAAZABYAAAAHAAEAAAAZABUAAAAHAAEAAAAZABQAAAAHAAEAAAAZABMAAAAHAAAAAAAYABYAAAAHAAEAAAAYABUAAAAHAAEAAAAYABQAAAAHAAEAAAAYABMAAAAHAAAAAAAXABYAAAAHAAEAAAAXABUAAAAHAAEAAAAXABQAAAAHAAEAAAAXABMAAAAHAAAAAAAWABYAAAAHAAEAAAAWABUAAAAHAAEAAAAWABQAAAAHAAEAAAAWABMAAAAHAAAAAAAVABYAAAAHAAEAAAAVABUAAAAHAAEAAAAVABQAAAAHAAEAAAAVABMAAAAHAAAAAAAUABYAAAAHAAEAAAAUABUAAAAHAAEAAAAUABQAAAAHAAEAAAAUABMAAAAHAAAAAAATABYAAAAHAAEAAAATABUAAAAHAAEAAAATABQAAAAHAAEAAAATABMAAAAHAAAAAAASABYAAAAHAAEAAAASABUAAAAHAAEAAAASABQAAAAHAAEAAAASABMAAAAHAAAAAAARABYAAAAHAAEAAAARABUAAAAHAAEAAAARABQAAAAHAAEAAAARABMAAAAHAAAAAAAQABYAAAAHAAEAAAAQABUAAAAHAAEAAAAQABQAAAAHAAEAAAAQABMAAAAHAAAAAAAPABYAAAAHAAEAAAAPABUAAAAHAAEAAAAPABQAAAAHAAEAAAAPABMAAAAHAAAAAAAOABYAAAAHAAEAAAAOABUAAAAHAAEAAAAOABQAAAAHAAEAAAAOABMAAAAHAAAAAAANABYAAAAHAAEAAAANABUAAAAHAAEAAAANABQAAAAHAAEAAAANABMAAAAHAAAAAAAMABYAAAAHAAEAAAAMABUAAAAHAAEAAAAMABQAAAAHAAEAAAAMABMAAAAHAAAAAAALABYAAAAHAAEAAAALABUAAAAHAAEAAAALABQAAAAHAAEAAAALABMAAAAHAAAAAAAKABYAAAAHAAEAAAAKABUAAAAHAAEAAAAKABQAAAAHAAEAAAAKABMAAAAHAAAAAAAJABYAAAAHAAEAAAAJABUAAAAHAAEAAAAJABQAAAAHAAEAAAAJABMAAAAHAAAAAAAIABYAAAAHAAEAAAAIABUAAAAHAAEAAAAIABQAAAAHAAEAAAAIABMAAAAHAAAAAAAHABYAAAAHAAEAAAAHABUAAAAHAAEAAAAHABQAAAAHAAEAAAAHABMAAAAHAAAAAAAGABYAAAAHAAEAAAAGABUAAAAHAAEAAAAGABQAAAAHAAEAAAAGABMAAAAHAAAAAAAFABYAAAAHAAEAAAAFABUAAAAHAAEAAAAFABQAAAAHAAEAAAAFABMAAAAHAAAAAAAEABYAAAAHAAEAAAAEABUAAAAHAAEAAAAEABQAAAAHAAEAAAAEABMAAAAHAAAAAAADABYAAAAHAAEAAAADABUAAAAHAAEAAAADABQAAAAHAAEAAAADABMAAAAHAAAAAAACABYAAAAHAAEAAAACABUAAAAHAAEAAAACABQAAAAHAAEAAAACABMAAAAHAAAAAAABABYAAAAHAAEAAAABABUAAAAHAAEAAAABABQAAAAHAAEAAAABABMAAAAHAAAAAAAAABYAAAAGAAEAAAAAABUAAAAGAAEAAAAAABQAAAAGAAEAAAAAABMAAAAGAAAAAAA=")
tile_set = SubResource("TileSet_lnu2h")

[node name="WallLeft" parent="." instance=ExtResource("5_u5sy4")]
position = Vector2(-10, 180)

[node name="WallRight" parent="." instance=ExtResource("5_u5sy4")]
position = Vector2(650, 180)

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(320, 285)

[node name="MelonPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_lbhrr")

[node name="MelonSpawnPoint" type="PathFollow2D" parent="MelonPath"]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" parent="." instance=ExtResource("6_p57ef")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
